--- a/2ndOblig/firstpage.html
+++ b/2ndOblig/firstpage.html
@@ -7,9 +7,13 @@
 <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-<h1>Our second obligatory assignment</h1>
+<h1>The coral sea wildlife</h1>
+<h2>An eel swimming peacefully at the bottom of the Great Barrier Reef.</h2>
+<img src="C:\Users\susan\OneDrive\Bilder\Kamerabilder\061.JPG" alt="Picture of an eel">
 
 
 <button onclick="DATA1200.html">Second page</button>
 </body>
 </html>
+
+<!--Får ikke helt den her stylesheeten til å virke-->
