--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Learning outcomes</h2>
+<h2>DATA1200</h2>
+<h3>Learning outcomes</h3>
+
+<h4>Knowledge</h4>
+<h5>The student:</h5>
+<ul>
+    <li>knows the central role that the web and the internet have in modern data processing</li>
+    <li>is familiar with relevant programming tools and repositories with version control</li>
+    <li>has basic knowledge of and experience with collaboration in software development as a form of work</li>
+</ul>
+
+<h4>Skills</h4>
+<h5>The student:</h5>
+<ul>
+    <li>can create user-friendly and universally designed solutions in line with legislation</li>
+    <li>build webpages with the key technologies for web (HTML, CSS)</li>
+    <li>can use current development tools and version control</li>
+    <li>can plan, organize and implement smaller IT projects</li>
+</ul>
+
+<h4>Genereal competence</h4>
+<h5>The student:</h5>
+<ul>
+    <li>can communicate the result of a development work</li>
+    <li>can collaborate in groups</li>
+</ul>
+
 <button onclick="firstpage.html">Back to first page</button>
 </body>
 </html>
