--- a/2ndOblig/firstpage.html
+++ b/2ndOblig/firstpage.html
@@ -4,7 +4,7 @@
 <title>2nd Oblig</title>
 <meta lang="en">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="style/stylesheet.css">
 </head>
 
 <body>
@@ -18,3 +18,4 @@
 </html>
 
 <!--Får ikke helt den her stylesheeten til å virke-->
+
