--- a/2ndOblig/firstpage.html
+++ b/2ndOblig/firstpage.html
@@ -17,4 +17,4 @@
 </body>
 </html>
 
-<!--Får ikke helt den her stylesheeten til å virke-->
+<!--Får ikke helt den her stylesheeten til å virke heihei-->
