--- a/2ndOblig/firstpage.html
+++ b/2ndOblig/firstpage.html
@@ -13,7 +13,7 @@
 <img src="C:\Users\susan\OneDrive\Bilder\Kamerabilder\061.JPG" alt="Picture of an eel">
 
 
-<button onclick="DATA1200.html">Second page</button>
+<button onclick="subfolder/secondpage.html">Second page</button>
 </body>
 </html>
 
