Fikset link fra andre til første side

--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -28,6 +28,6 @@
     <li>can collaborate in groups</li>
 </ul>
 
-<button onclick="firstpage.html">Back to first page</button>
+<button><a href="../index.html">Back to the first page</a></button>
 </body>
 </html>
