--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -9,11 +9,11 @@
 
 <body>
 <h1>The coral sea wildlife</h1>
-<h2>An eel swimming peacefully at the bottom of the Great Barrier Reef.</h2>
-<img src="C:\Users\susan\OneDrive\Bilder\Kamerabilder\061.JPG" alt="Picture of an eel">
+<h2>Picture of a cute seal</h2>
+<img src="/style/sel.jpeg" alt="Picture of an seel">
 
 
-<button onclick="DATA1200.html">Second page</button>
+<button onclick="subfolder/secondpage.html">Second page</button>
 </body>
 </html>
 
