Fikset file path

--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -12,7 +12,7 @@
 <h2>An eel swimming peacefully at the bottom of the Great Barrier Reef.</h2>
 <img src="C:\Users\susan\OneDrive\Bilder\Kamerabilder\061.JPG" alt="Picture of an eel">
 
-<button onclick="DATA1200.html">Second page</button>
+<button><a href="subfolder/secondpage.html">Second page</a></button>
 </body>
 </html>
 
