--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>The coral sea wildlife</h1>
 <h2>Picture of a cute seal</h2>
-<img src="/style/sel.jpeg" alt="Picture of an seel">
+<img src="style/sel.jpeg" alt="Picture of an seel">
 
 <button><a href="subfolder/secondpage.html">Second page</a></button>
 </body>
