--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -9,7 +9,8 @@
 
 <body>
 <h1>The coral sea wildlife</h1>
-<h2>Picture of a cute seal</h2>
+<h2>Undertittel</h2>
+<p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 <img src="style/sel.jpeg" alt="Picture of an seel">
 
 <button><a href="subfolder/secondpage.html">Second page</a></button>
