--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -4,7 +4,7 @@
 <title>2nd Oblig</title>
 <meta lang="en">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style/stylesheet.css">
+<link rel="stylesheet" href="style/css/stylesheet.css">
 </head>
 
 <body>
