--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -11,7 +11,7 @@
 <h1>The coral sea wildlife</h1>
 <h2>Undertittel</h2>
 <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
-<img src="style/sel.jpeg" alt="Picture of an seel">
+<img src="style/images/sel.jpeg" alt="Picture of an seel">
 <br>
 
 <button><a href="subfolder/secondpage.html">Second page</a></button>
