lagt til at den åpner ny fane

--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -14,6 +14,6 @@
 <img src="style/images/sel.jpeg" alt="Picture of an seel">
 <br>
 
-<button><a href="subfolder/secondpage.html">Second page</a></button>
+<button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
 </body>
 </html>
