Lagt til artikkeltekst

--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -13,6 +13,11 @@
 <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 <img src="style/images/sel.jpeg" alt="Picture of an seel">
 <br>
+<div class="artikkeltekst">
+    <p>Første paragraf</p>
+    <p>Andre paragraf</p>
+    <p>Tredje paragraf</p>
+</div>
 
 <button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
 </body>
