--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>The coral sea wildlife</h1>
-<h2>Undertittel</h2>
+<h2>Exploring the Wonders of The Coral Sea: A Dive into its Vibrant Wildlife</h2>
 <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 <img src="style/images/sel.jpeg" alt="Picture of an seel">
 <br>
