Lagt til mer tekst

--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -15,6 +15,20 @@
 <img src="style/images/coral.jpg" alt="Picture of corals">
 
 <div class="artikkeltekst">
+    <h3>The coral sea</h3>
+    <p>The Coral Sea, a pristine and biodiverse marine paradise, is a treasure trove of life beneath the waves. 
+        In this captivating article, we embark on an underwater journey to uncover the secrets of this mesmerizing 
+        ecosystem and its astonishing inhabitants. From colorful coral gardens to enigmatic sea creatures, the Coral 
+        Sea offers a spectacle of natural beauty that continues to awe and inspire.
+    </p>
+    <h3>The marine residents</h3>
+    <p>Dive deep into the crystal-clear waters of the Coral Sea as we introduce you to its charismatic marine residents. 
+        Discover the fascinating world of corals, where delicate polyps create sprawling colonies that provide shelter and 
+        sustenance to an array of marine life. Join us as we unravel the mysteries of coral reproduction and growth, and 
+        understand the crucial role these organisms play in maintaining the health of our oceans.</p>
+    <p> Venture further into the depths to encounter a dazzling array of fish species, from the striking clownfish darting 
+        among anemones to the graceful sea turtles gliding through the water. Learn about the intricate relationships between 
+        these species and the critical role they play in maintaining the delicate balance of the Coral Sea's ecosystem.</p>
 </div>
 
 <img src="style/images/sel.jpeg" alt="Picture of an seel">
