--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -15,7 +15,7 @@
 <img src="style/images/coral.jpg" alt="Picture of corals">
 
 <div class="artikkeltekst">
-    <h3>The coral sea</h3>
+    <h3>The coral sea: A biodiverse marine paradise</h3>
     <p>The Coral Sea, a pristine and biodiverse marine paradise, is a treasure trove of life beneath the waves. 
         In this captivating article, we embark on an underwater journey to uncover the secrets of this mesmerizing 
         ecosystem and its astonishing inhabitants. From colorful coral gardens to enigmatic sea creatures, the Coral 
