--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -35,7 +35,12 @@
 </ul>
 
 <button><a href="../index.html">Back to the first page</a></button>
-<footer>Footer</footer>
+<footer>
+<ul>
+    <li>neisa1486@oslomet.no</li>
+    
+</ul>
 
+</footer>
 </body>
 </html>
