--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -59,11 +59,10 @@
         promoting the growth of vital organisms like phytoplankton, which 
         absorb carbon dioxide from the atmosphere and help regulate the 
         Earth's climate.</p>
-    
 
 </div>
 
 <button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
-<footer>Footer</footer>
+<footer><p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT.<a href="https://openai.com/</p></footer">Chatgpt</a></p></footer>
 </body>
 </html>
