--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -63,6 +63,9 @@
 </div>
 
 <button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
-<footer><p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT.<a href="https://openai.com"></a></p></footer>
+<footer>
+    <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT.</p>
+    <a href="https://openai.com"></a>
+    </footer>
 </body>
 </html>
