--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -64,8 +64,7 @@
 
 <button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
 <footer>
-    <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT.</p>
-    <a href="https://openai.com">ChatGPT</a>
+    <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT. <a href="https://openai.com">ChatGPT</a></p>
     </footer>
 </body>
 </html>
