--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-<h1>The coral sea wildlife</h1>
-<h2>Exploring the Wonders of The Coral Sea: A Dive into its Vibrant Wildlife</h2>
-<p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
+<div class="topp">
+   <h1>The coral sea wildlife</h1>
+   <h2>Exploring the Wonders of The Coral Sea: A Dive into its Vibrant Wildlife</h2>
+   <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 
-<img src="style/images/coral.jpg" alt="Picture of corals">
+   <img src="style/images/coral.jpg" alt="Picture of corals">
+</div>
 
 <div class="artikkeltekst">
     <h3>The coral sea: A biodiverse marine paradise</h3>
