--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -14,6 +14,7 @@
 <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 
 <img src="style/images/coral.jpg" alt="Picture of corals">
+<p>Bildet er hentet fra <a href="https://www.atlanterhavsparken.no/opplevelser/selbukta" target="_blank">Atlanterhavsparken webpage</a></p>
 
 <div class="artikkeltekst">
     <h3>The coral sea: A biodiverse marine paradise</h3>
