--- a/2ndOblig/firstpage.html
+++ b/2ndOblig/firstpage.html
@@ -4,17 +4,17 @@
 <title>2nd Oblig</title>
 <meta lang="en">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="style/stylesheet.css">
 </head>
 
 <body>
 <h1>The coral sea wildlife</h1>
 <h2>An eel swimming peacefully at the bottom of the Great Barrier Reef.</h2>
 <img src="C:\Users\susan\OneDrive\Bilder\Kamerabilder\061.JPG" alt="Picture of an eel">
-
-
+<br>
 <button onclick="DATA1200.html">Second page</button>
 </body>
 </html>
 
 <!--Får ikke helt den her stylesheeten til å virke-->
+<!--Utvidet href til å først hente mappen style-> også stylesheet-->
