--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -33,6 +33,7 @@
         these species and the critical role they play in maintaining the delicate balance of the Coral Sea's ecosystem.</p>
         
         <img src="style/images/sel.jpeg" alt="Picture of an seel">
+        <p>kilde på bildet</p>
         
     </div>
 
