--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -34,7 +34,7 @@
     <li>can collaborate in groups</li>
 </ul>
 
-<button><a href="../index.html">Back to the first page</a></button>
+<button class="knapp"><a href="../index.html">Back to the first page</a></button>
 <footer>
 <ul>
     <li>neisa1486@oslomet.no</li>
