--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -65,7 +65,7 @@
 
 </div>
 
-<button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
+<button class="knapp"><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
 <footer>
     <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT. <a href="https://openai.com" target="_blank">ChatGPT</a></p>
     </footer>
