--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -4,7 +4,7 @@
         <title>2nd Oblig</title>
         <meta lang="en">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style/css/stylesheet.css">
+        <link rel="stylesheet" href="..style/css/stylesheet.css">
     </head>
 <body>
 <h1>DATA1200</h1>
