--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -14,7 +14,7 @@
    <h2>Exploring the Wonders of The Coral Sea: A Dive into its Vibrant Wildlife</h2>
    <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 
-<img src="style/images/coral.jpg" alt="Picture of corals">
+<img src="style/images/coral.jpg" alt="Picture of corals"></div>
 
 <div class="artikkeltekst">
     <h3>The coral sea: A biodiverse marine paradise</h3>
@@ -33,7 +33,7 @@
         these species and the critical role they play in maintaining the delicate balance of the Coral Sea's ecosystem.</p>
         
         <img src="style/images/sel.jpeg" alt="Picture of an seel">
-        
+
     </div>
 
 <div class="artikkeltekst">
