--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -64,7 +64,9 @@
         Earth's climate.</p>
 
 </div>
-<button class="knapp"><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
+<div class="knapp">
+<button><a href="subfolder/secondpage.html" target="_blank">Second page</a></button>
+</div>
 
 <footer>
     <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT. <a href="https://openai.com" target="_blank">ChatGPT</a></p>
