--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -32,7 +32,7 @@
         among anemones to the graceful sea turtles gliding through the water. Learn about the intricate relationships between 
         these species and the critical role they play in maintaining the delicate balance of the Coral Sea's ecosystem.</p>
         
-        <img src="style/images/sel.jpeg" alt="Picture of an seel">
+        <img src="style/images/sel.jpeg" alt="Picture of an seal">
         <p>kilde på bildet</p>
         
     </div>
