--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -10,6 +10,7 @@
 <h1>DATA1200</h1>
 <h2>Learning outcomes</h2>
 
+
 <h3>Knowledge</h3>
 <h4>The student:</h4>
 <ul>
@@ -37,7 +38,7 @@
 <button><a href="../index.html">Back to the first page</a></button>
 <footer>
 <ul>
-    <li>neisa1486@oslomet.no</li>
+    <li>Neisa1486@oslomet.no</li>
     <li>s371389@oslomet.no</li>
 </ul>
 </footer>
