--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -43,6 +43,7 @@
 <ul>
     <li>Neisa1486@oslomet.no</li>
     <li>s371389@oslomet.no</li>
+    <li>manie0289@oslomet.no</li>
 </ul>
 </footer>
     
