--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -14,10 +14,9 @@
    <h2>Exploring the Wonders of The Coral Sea: A Dive into its Vibrant Wildlife</h2>
    <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 
-<figure>
-    <img src="style/images/coral.jpg" alt="Picture of corals"></div>
-    <figcaption>Georgette Douwma / Getty Image</figcaption>
-</figure>
+   <img src="style/images/coral.jpg" alt="Picture of corals">
+   <caption>Georgette Douwma / Getty Image</caption> 
+</div>
 
 
 <div class="artikkeltekst">
