--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -15,7 +15,7 @@
    <p id="byline">Anna Hansen 27.09.2023, kl. 10:00</p>
 
    <img src="style/images/coral.jpg" alt="Picture of corals">
-   <caption>Georgette Douwma / Getty Image</caption> 
+   <caption><a href="https://www.tripsavvy.com/how-to-protect-coral-reef-when-you-travel-4844217">Georgette Douwma / Getty Image</a></caption> 
 </div>
 
 
