--- a/subfolder/secondpage.html
+++ b/subfolder/secondpage.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>2nd Oblig</title>
+        <meta lang="en">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style/css/stylesheet.css">
+    </head>
 <body>
-<h2>DATA1200</h2>
-<h3>Learning outcomes</h3>
+<h1>DATA1200</h1>
+<h2>Learning outcomes</h2>
 
-<h4>Knowledge</h4>
-<h5>The student:</h5>
+
+<h3>Knowledge</h3>
+<h4>The student:</h4>
 <ul>
     <li>knows the central role that the web and the internet have in modern data processing</li>
     <li>is familiar with relevant programming tools and repositories with version control</li>
     <li>has basic knowledge of and experience with collaboration in software development as a form of work</li>
 </ul>
 
-<h4>Skills</h4>
-<h5>The student:</h5>
+<h3>Skills</h3>
+<h4>The student:</h4>
 <ul>
     <li>can create user-friendly and universally designed solutions in line with legislation</li>
     <li>build webpages with the key technologies for web (HTML, CSS)</li>
@@ -21,13 +29,24 @@
     <li>can plan, organize and implement smaller IT projects</li>
 </ul>
 
-<h4>Genereal competence</h4>
-<h5>The student:</h5>
+<h3>Genereal competence</h3>
+<h4>The student:</h4>
 <ul>
     <li>can communicate the result of a development work</li>
     <li>can collaborate in groups</li>
 </ul>
 
-<button onclick="firstpage.html">Back to first page</button>
+<div  class="knapp">
+<button><a href="../index.html">Back to the first page</a></button>
+</div>
+
+<footer>
+<ul>
+    <li>Neisa1486@oslomet.no</li>
+    <li>s371389@oslomet.no</li>
+    <li>manie0289@oslomet.no</li>
+</ul>
+</footer>
+    
 </body>
 </html>
