--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -45,6 +45,7 @@
     <li>Neisa1486@oslomet.no</li>
     <li>s371389@oslomet.no</li>
     <li>manie0289@oslomet.no</li>
+    <li>s372382@oslomet.no</li>
 </ul>
 </footer>
     
