--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../style/css/stylesheet.css">
     </head>
 <body>
+<div class="secondpage">
 <h1>DATA1200</h1>
 <h2>Learning outcomes</h2>
 
@@ -35,6 +36,7 @@
     <li>can communicate the result of a development work</li>
     <li>can collaborate in groups</li>
 </ul>
+</div>
 
 <div  class="knapp">
 <button><a href="../index.html">Back to the first page</a></button>
