--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -48,6 +48,7 @@
     <li>s371389@oslomet.no</li>
     <li>manie0289@oslomet.no</li>
     <li>s372382@oslomet.no</li>
+    <li>s352495@oslomet.no</li>
 </ul>
 </footer>
     
