--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -72,8 +72,10 @@
 <button><a href="subfolder/secondpage.html">Second page</a></button>
 </div>
 
+<div class="footer1">
 <footer>
     <p>Source for generating text: OpenAI. (2021). GPT-3.5-based ChatGPT. <a href="https://openai.com" target="_blank">ChatGPT</a></p>
-    </footer>
+</footer>
+</div>
 </body>
 </html>
