--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -36,12 +36,13 @@
     <li>can communicate the result of a development work</li>
     <li>can collaborate in groups</li>
 </ul>
-</div>
+
 
 <div  class="knapp">
 <button><a href="../index.html">Back to the first page</a></button>
 </div>
 
+<div class=footer1>
 <footer>
 <ul>
     <li>Neisa1486@oslomet.no</li>
@@ -51,6 +52,8 @@
     <li>s352495@oslomet.no</li>
 </ul>
 </footer>
+</div>
+</div>
     
 </body>
 </html>
