--- a/2ndOblig/index.html
+++ b/2ndOblig/index.html
@@ -44,28 +44,19 @@
 <div class="artikkeltekst">
 
     <h3>Diverse Seal Species</h3>
-    <p>Seals come in various species, each with its own distinct 
-        characteristics. True seals, eared seals (sea lions), 
-        and the walrus make up this family. From the harbor 
-        seal's cuteness to the power of the elephant seal, 
+    <p>Seals come in various species, each with its own distinct characteristics. True seals, eared seals (sea lions), 
+        and the walrus make up this family. From the harbor seal's cuteness to the power of the elephant seal, 
         they all have their place in the marine world.</p>
     <h3>Adaptations for Aquatic Life</h3>
-    <p>Seals are perfectly suited for life in the water. 
-        Their streamlined bodies reduce water resistance, 
-        and their blubber layer provides insulation against cold waters. 
-        Powerful flippers help them glide through the ocean, while their 
-        ability to hold their breath for extended periods aids in hunting.
-         Their keen underwater vision is a crucial asset for finding prey
-          in the depths.</p>
+    <p>Seals are perfectly suited for life in the water. Their streamlined bodies reduce water resistance, and their blubber 
+        layer provides insulation against cold waters. Powerful flippers help them glide through the ocean, while their 
+        ability to hold their breath for extended periods aids in hunting. Their keen underwater vision is a crucial asset for 
+        finding prey in the depths.</p>
     <h3>Ecological Significance</h3>
-    <p>Seals hold a key position in the marine food chain. 
-        They feed on fish, squid, and crustaceans, helping 
-        to regulate their populations. Additionally, seals 
-        serve as prey for larger predators like sharks and orcas. 
-        Their excrement, rich in nutrients, fertilizes marine ecosystems, 
-        promoting the growth of vital organisms like phytoplankton, which 
-        absorb carbon dioxide from the atmosphere and help regulate the 
-        Earth's climate.</p>
+    <p>Seals hold a key position in the marine food chain. They feed on fish, squid, and crustaceans, helping to regulate their 
+        populations. Additionally, seals serve as prey for larger predators like sharks and orcas. Their excrement, rich in 
+        nutrients, fertilizes marine ecosystems, promoting the growth of vital organisms like phytoplankton, which absorb carbon
+        dioxide from the atmosphere and help regulate the Earth's climate.</p>
 
 </div>
 <div class="knapp">
