--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -14,7 +14,7 @@
 
 
 <h3>Knowledge</h3>
-<small>The student:</small>
+<h4>The student:</h4>
 <ul>
     <li>knows the central role that the web and the internet have in modern data processing</li>
     <li>is familiar with relevant programming tools and repositories with version control</li>
@@ -22,7 +22,7 @@
 </ul>
 
 <h3>Skills</h3>
-<small>The student:</small>
+<h4>The student:</h4>
 <ul>
     <li>can create user-friendly and universally designed solutions in line with legislation</li>
     <li>build webpages with the key technologies for web (HTML, CSS)</li>
@@ -31,7 +31,7 @@
 </ul>
 
 <h3>Genereal competence</h3>
-<samll>The student:</small>
+<h4>The student:</h4>
 <ul>
     <li>can communicate the result of a development work</li>
     <li>can collaborate in groups</li>
