--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -42,6 +42,8 @@
 <button><a href="../index.html">Back to the first page</a></button>
 </div>
 
+<img src="/style/images/AccessibilityTest.png">
+
 <div class=footer1>
 <footer>
 <ul>
