--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -7,6 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style/css/stylesheet.css">
     </head>
+    <header id="page-header">
+        <div class="header">
+            <nav>
+                <img src="../style/images/oslometlogo.png" class="horizontal-menu">
+            </nav>
+        </div>
+    </header>
 <body>
 <div class="secondpage">
 <h1>DATA1200</h1>
