--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -8,8 +8,13 @@
         <link rel="stylesheet" href="../style/css/stylesheet.css">
     </head>
 <body>
+
+<header class="header">
+        <img src="style/img/logo.png" alt="OsloMet Logo">
+        <h1>DATA1200</h1>
+ </header>
+
 <div class="secondpage">
-<h1>DATA1200</h1>
 <h2>Learning outcomes</h2>
 
 
