--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="header">
-        <img src="style/img/logo.png" alt="OsloMet Logo">
+        <img src="style/images/logo.png" alt="OsloMet Logo">
         <h1>DATA1200</h1>
  </header>
 
