Fikset stilen second page

--- a/2ndOblig/subfolder/secondpage.html
+++ b/2ndOblig/subfolder/secondpage.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="header">
-        <img src="style/images/logo.png" alt="OsloMet Logo">
+        <img src="../style/images/logo.png" alt="OsloMet Logo">
         <h1>DATA1200</h1>
  </header>
 
@@ -41,26 +41,26 @@
     <li>can communicate the result of a development work</li>
     <li>can collaborate in groups</li>
 </ul>
-
+</div>
 
 <div  class="knapp">
 <button><a href="../index.html">Back to the first page</a></button>
 </div>
 
-<img src="/style/images/AccessibilityTest.png">
+<div id="accessibilitytest">
+    <img src="../style/images/AccessibilityTest.png">
+</div>
 
-<div class=footer1>
 <footer>
-<ul>
-    <li>Neisa1486@oslomet.no</li>
-    <li>s371389@oslomet.no</li>
-    <li>manie0289@oslomet.no</li>
-    <li>s372382@oslomet.no</li>
-    <li>s352495@oslomet.no</li>
-</ul>
-</footer>
-</div>
-</div>
+    <img src="../style/images/logo.png" alt="OsloMet Logo">
+    <ul>
+        <li>Neisa1486@oslomet.no</li>
+        <li>s371389@oslomet.no</li>
+        <li>manie0289@oslomet.no</li>
+        <li>s372382@oslomet.no</li>
+        <li>s352495@oslomet.no</li>
+    </ul>
+  </footer>
     
 </body>
 </html>
